# user-cohorts

./: .gitignore  CLAUDE.md  Dockerfile  approach.md  cohort_keywords.py  data.csv  docker-compose.yml  documentation.md  engagement.csv  enrich_metadata_keywords.py  fetch_data.py  fetch_missing_videos.py  fetch_videos.py  finetuned_user_embeddings.npy  finetuned_video_embeddings.npy  implementation.md  infer.py  infer_v2.py  infer_v3.md  infer_v3.py  infer_web.py  ingest_missing_videos.py  main.py  migrate_video_collection.py  missing_ids.json  new_ck_user_events.csv  pyproject.toml  reset.py  setup_milvus.py  suggest.py  test.py  test_web.py  test_web_ctx.py  test_web_rerank.py  user_embeddings.npy  video_data.csv  video_embeddings.npy  video_ids.json  z.py
.claude/: settings.local.json
cache/: video_embeddings.pkl  videos.pkl
db/: pyproject.toml
db/src/db/: __init__.py  clickhouse.py  milvus.py  opensearch.py
models/: pyproject.toml
models/src/models/: __init__.py  config.py  two_tower.py
utils/: pyproject.toml
utils/src/utils/: __init__.py  cohort.py  config.py  embeddings.py  engagement.py  ingest.py  metadata_extracter.py  page_context.py  prompt_generator.py
