[project]
name = "user-cohort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "pydantic_settings",
    "anthropic",
    "db",
    "utils",
    "models",
    "pymilvus>=2.6.12",
    "google-generativeai>=0.8.6",
    "google-genai>=1.75.0",
]

[tool.uv.workspace]
members = ["db", "utils", "models"]

[tool.uv.sources]
db = { workspace = true }
utils = { workspace = true }
models = { workspace = true }
