[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "kirtan.m@begenuin.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
