[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "kirtan.m@begenuin.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers",
    "numpy",
    "pandas",
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.13.4",
    "keybert>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
